--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'PT Mono', monospace;
     display: flex;
     flex-direction: column;
     align-items: center;
